--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -7,18 +7,18 @@
   \item[$\N$] The set of non-negative integers. Subscript denotes one greater than the maximum. See section \ref{sec:numbers}.
   \begin{description}
     \item[$\N^+$] The set of positive integers (not including zero).
-    \item[$\balance$] The set of balance values. Equivalent to $\N_{2^{64}}$. See equation \ref{eq:balance}.
+    \item[$\balance$] The set of balance values. Equivalent to $\Nbits{64}$. See equation \ref{eq:balance}.
     \item[$\gas$] The set of unsigned gas values. Equivalent to $\mathbb{N}_{2^{64}}$. See equation \ref{eq:gasregentry}.
-    \item[$\N_L$] The set of blob length values. Equivalent to $\N_{2^{32}}$. See section \ref{sec:numbers}.
-    \item[$\pvmreg$] The set of register values. Equivalent to $\N_{2^{64}}$. See equation \ref{eq:gasregentry}.
-    \item[$\N_S$] The set from which service indices are drawn. Equivalent to $\N_{2^{32}}$. See section \ref{eq:serviceaccounts}.
-    \item[$\timeslot$] The set of timeslot values. Equivalent to $\N_{2^{32}}$. See equation \ref{eq:time}.
+    \item[$\bloblength$] The set of blob length values. Equivalent to $\Nbits{32}$. See section \ref{sec:numbers}.
+    \item[$\pvmreg$] The set of register values. Equivalent to $\Nbits{64}$. See equation \ref{eq:gasregentry}.
+    \item[$\serviceid$] The set from which service indices are drawn. Equivalent to $\Nbits{32}$. See section \ref{eq:serviceaccounts}.
+    \item[$\timeslot$] The set of timeslot values. Equivalent to $\Nbits{32}$. See equation \ref{eq:time}.
   \end{description}
   \item[$\mathbb{Q}$] The set of rational numbers. Unused.
   \item[$\mathbb{R}$] The set of real numbers. Unused.
   \item[$\mathbb{Z}$] The set of integers. Subscript denotes range. See section \ref{sec:numbers}.
   \begin{description}
-    \item[$\Z_G$] The set of signed gas values. Equivalent to $\mathbb{Z}_{-2^{63}\dots2^{63}}$. See equation \ref{eq:gasregentry}.
+    \item[$\signedgas$] The set of signed gas values. Equivalent to $\mathbb{Z}_{-2^{63}\dots2^{63}}$. See equation \ref{eq:gasregentry}.
   \end{description}
 \end{description}
 
@@ -196,7 +196,7 @@ Without any superscript, the block is assumed to the block being imported or, if
 Here, the prime annotation indicates posterior state. Individual components may be identified with a letter subscript.
 \begin{description}
   \item[$\authpool$] The core $\authpool$uthorizations pool. See equation \ref{eq:authstatecomposition}. %	α
-  \item[$\beta$] Log of recent activity. See equation \ref{eq:recenthistory}. %	β
+  \item[$\recent$] Log of recent activity. See equation \ref{eq:recenthistory}. %	β
   \begin{description}
     \item[$\recenthistory$] Information on the most recent blocks.
     \item[$\beefybelt$] The Merkle mountain belt for accumulating Accumulation outputs.
@@ -224,7 +224,7 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \end{description}
   \item[$\thestate$] The $\thestate$verall state of the system. See equations \ref{eq:statetransition}, \ref{eq:statecomposition}. %	σ
   \item[$\thetime$] The most recent block's $\thetime$imeslot. %	τ
-  \item[$\varphi$] The authorization queue. %	ϕ
+  \item[$\authqueue$] The authorization queue. %	ϕ
   \item[$\disputes$] Past judgments on work-reports and validators. %	ψ
   \begin{description}
     \item[$\badset$] Work-reports judged to be incorrect.
