--- a/text/judgments.tex
+++ b/text/judgments.tex
@@ -32,7 +32,7 @@ The disputes extrinsic, $\xtdisputes$, may contain one or more verdicts $\xtverd
 \begin{equation}
   \begin{aligned}
     \xtdisputes &\equiv (\xtverdicts, \xtculprits, \xtfaults) \\
-    \where \xtverdicts &\in \seq{\tup{\hash, \ffrac{\thetime}{\mathsf{E}} - \N_2, \seq{\tup{\{\top, \bot\}, \N_{\valcount}, \mathbb{E}}}_{\floor{\nicefrac{2}{3}\valcount} + 1}}}\\
+    \where \xtverdicts &\in \seq{\tup{\hash, \ffrac{\thetime}{\mathsf{E}} - \N_2, \seq{\tup{\{\top, \bot\}, \valindex, \mathbb{E}}}_{\floor{\nicefrac{2}{3}\valcount} + 1}}}\\
     \also \xtculprits &\in \seq{\hash, \edkey, \mathbb{E}} \,,\quad
     \xtfaults \in \seq{\hash, \{\top,\bot\}, \edkey, \mathbb{E}}
   \end{aligned}
