--- a/text/reporting_assurance.tex
+++ b/text/reporting_assurance.tex
@@ -64,7 +64,7 @@ We define the set of \emph{availability specifications}, $\avspec$, as the tuple
 \begin{align}
   \avspec &\equiv \tuple{
     \isa{\as¬packagehash}{\hash}\,,\;
-    \isa{\as¬bundlelen}{\N_L}\,,\;
+    \isa{\as¬bundlelen}{\bloblength}\,,\;
     \isa{\as¬erasureroot}{\hash}\,,\;
     \isa{\as¬segroot}{\hash}\,,\;
     \isa{\as¬segcount}{\N}
@@ -80,7 +80,7 @@ We finally come to define a \emph{work-digest}, $\workdigest$, which is the data
 \begin{equation}\label{eq:workdigest}
   \mathbb{L} \equiv \tuple{
     \begin{alignedat}{9}
-      \isa{\wl¬service&}{\N_S}\,,\;
+      \isa{\wl¬service&}{\serviceid}\,,\;
       \isa{&\wl¬codehash&}{\hash}\,,\;
       \isa{&\wl¬payloadhash&}{\hash}\,,\;
       \isa{&\wl¬gaslimit&}{\gas}\,,\;
