--- a/text/accounts.tex
+++ b/text/accounts.tex
@@ -1,19 +1,19 @@
 \section{Service Accounts}\label{sec:accounts}
 
-As we already noted, a service in \Jam is somewhat analogous to a smart contract in Ethereum in that it includes amongst other items, a code component, a storage component and a balance. Unlike Ethereum, the code is split over two isolated entry-points each with their own environmental conditions; one, \emph{refinement}, is essentially stateless and happens in-core, and the other, \emph{accumulation}, which is stateful and happens on-chain. It is the latter which we will concern ourselves with now.
+As we already noted, a service in \Jam is somewhat analogous to a smart contract in Ethereum in that it includes amongst other items, a code component, a storage component and a balance. Unlike Ethereum, the code is split over two isolated entry-points each with their own environmental conditions; one, \emph{Refinement}, is essentially stateless and happens in-core, and the other, \emph{Accumulation}, which is stateful and happens on-chain. It is the latter which we will concern ourselves with now.
 
-Service accounts are held in state under $\accounts$, a partial mapping from a service identifier $\N_S$ into a tuple of named elements which specify the attributes of the service relevant to the \Jam protocol. Formally:
+Service accounts are held in state under $\accounts$, a partial mapping from a service identifier $\serviceid$ into a tuple of named elements which specify the attributes of the service relevant to the \Jam protocol. Formally:
 \begin{align}\label{eq:serviceaccounts}
-  \N_S &\equiv \N_{2^{32}} \\
-  \accounts &\in \dict{\N_S}{\serviceaccount}
+  \serviceid &\equiv \Nbits{32} \\
+  \accounts &\in \dict{\serviceid}{\serviceaccount}
 \end{align}
 
-The service account is defined as the tuple of storage dictionary $\mathbf{s}$, preimage lookup dictionaries $\sa¬preimages$ and $\sa¬requests$, code hash $\sa¬codehash$, balance $\sa¬balance$ and gratis storage offset $\sa¬gratis$, as well as the two code gas limits $\sa¬minaccgas$ \& $\sa¬minmemogas$. We also record certain usage characteristics concerning the account: the time slot at creation $\sa¬created$, the time slot at the most recent accumulation $\sa¬lastacc$ and the parent service $\sa¬parent$. Formally:
+The service account is defined as the tuple of storage dictionary $\sa¬storage$, preimage lookup dictionaries $\sa¬preimages$ and $\sa¬requests$, code hash $\sa¬codehash$, balance $\sa¬balance$ and gratis storage offset $\sa¬gratis$, as well as the two code gas limits $\sa¬minaccgas$ \& $\sa¬minmemogas$. We also record certain usage characteristics concerning the account: the time slot at creation $\sa¬created$, the time slot at the most recent accumulation $\sa¬lastacc$ and the parent service $\sa¬parent$. Formally:
 \begin{align}\label{eq:serviceaccount}
   \serviceaccount \equiv \tuple{\ \begin{aligned}
     \sa¬storage &\in \dict{\blob}{\blob}\,,\ 
     \sa¬preimages \in \dict{\hash}{\blob}\,,\\
-    \sa¬requests &\in \dict{\tuple{\hash,\N_L}}{\seq{\timeslot}_{:3}}\,,\\
+    \sa¬requests &\in \dict{\tuple{\hash,\bloblength}}{\seq{\timeslot}_{:3}}\,,\\
     \sa¬gratis &\in \balance\,,\ 
     \sa¬codehash \in \hash\,,\ 
     \sa¬balance \in \balance\,,\ 
@@ -21,7 +21,7 @@ The service account is defined as the tuple of storage dictionary $\mathbf{s}$, 
     \sa¬minmemogas &\in \gas\,,\ 
     \sa¬created \in \timeslot\,,\ 
     \sa¬lastacc \in \timeslot\,,\ 
-    \sa¬parent \in \N_S\\
+    \sa¬parent \in \serviceid\\
     %i, o, f
   \end{aligned}\,}
 \end{align}
@@ -37,9 +37,9 @@ Thus, the balance of the service of index $s$ would be denoted $\accounts\subb{s
 
 \subsection{Code and Gas}
 
-The code and associated metadata of a service account is identified by a hash which, if the service is to be functional, must be present within its preimage lookup (see section \ref{sec:lookups}) and have a preimage which is a proper encoding of the two blobs. We thus define the actual code $\mathbf{c}$ and metadata $\mathbf{m}$:
+The code and associated metadata of a service account is identified by a hash which, if the service is to be functional, must be present within its preimage lookup (see section \ref{sec:lookups}) and have a preimage which is a proper encoding of the two blobs. We thus define the actual code $\sa¬code$ and metadata $\sa¬metadata$:
 \begin{align}
-  \forall \mathbf{a} \in \serviceaccount : \tup{\mathbf{a}_\mathbf{m}, \mathbf{a}_\mathbf{c}} \equiv \begin{cases}
+  \forall \mathbf{a} \in \serviceaccount : \tup{\mathbf{a}_\sa¬metadata, \mathbf{a}_\sa¬code} \equiv \begin{cases}
     \tup{\mathbf{m}, \mathbf{c}} &\when \se(\var{\mathbf{m}}, \mathbf{c}) = \mathbf{a}_\sa¬preimages[\mathbf{a}_\sa¬codehash] \\
     \tup{\none, \none} &\otherwise
   \end{cases}
@@ -54,7 +54,7 @@ There are three entry-points in the code:
 
 Whereas the first, executing in-core, is described in more detail in section \ref{sec:packagesanditems}, the latter two are defined in the present section.
 
-As stated in appendix \ref{sec:virtualmachine}, execution time in the \Jam virtual machine is measured deterministically in units of \emph{gas}, represented as a natural number less than $2^{64}$ and formally denoted $\gas$. We may also use $\Z_G$ to denote the set $\Z_{-2^{63}\dots2^{63}}$ if the quantity may be negative. There are two limits specified in the account, $g$, the minimum gas required in order to execute the \emph{Accumulate} entry-point of the service's code, and $m$, the minimum required for the \emph{On Transfer} entry-point.
+As stated in appendix \ref{sec:virtualmachine}, execution time in the \Jam virtual machine is measured deterministically in units of \emph{gas}, represented as a natural number less than $2^{64}$ and formally denoted $\gas$. We may also use $\signedgas$ to denote the set $\Z_{-2^{63}\dots2^{63}}$ if the quantity may be negative. There are two limits specified in the account, $\sa¬minaccgas$, the minimum gas required in order to execute the \emph{Accumulate} entry-point of the service's code, and $\sa¬minmemogas$, the minimum required for the \emph{On Transfer} entry-point.
 
 
 
@@ -115,7 +115,7 @@ The historical lookup function $\histlookup$ may now be defined as:
   \begin{aligned}\label{eq:historicallookup}
     &\histlookup\colon (\serviceaccount, \timeslot, \hash) \to \optional{\blob} \\
     &\histlookup(\mathbf{a}, t, h) \equiv \begin{cases}
-      \mathbf{a}_\sa¬preimages[h]\!\!\!\! &\when h \in \Fkeys{\mathbf{a}_\sa¬preimages} \wedge I(\mathbf{a}_\sa¬requests\subb{h, \len{\mathbf{a}_\sa¬preimages[h]}}, t) \!\!\!\!\! \\
+      \mathbf{a}_\sa¬preimages\subb{h}\!\!\!\! &\when h \in \Fkeys{\mathbf{a}_\sa¬preimages} \wedge I(\mathbf{a}_\sa¬requests\subb{h, \len{\mathbf{a}_\sa¬preimages[h]}}, t) \!\!\!\!\! \\
       \none &\otherwise
     \end{cases}\\
     &\where I(\mathbf{l}, t) = \begin{cases}
@@ -142,8 +142,8 @@ Furthermore, as we will see in the account serialization function in section \re
 We may then define a third dependent term $\sa¬minbalance$, the minimum, or \emph{threshold}, balance needed for any given service account in terms of its storage footprint.
 \begin{align}
   \forall \mathbf{a} \in \Fvalues{\accounts}:\left\{\begin{aligned}
-    \mathbf{a}_\sa¬items \in \N_{2^{32}} &\equiv 2\cdot\len{\,\mathbf{a}_\sa¬requests\,} + \len{\,\mathbf{a}_\sa¬storage\,} \\
-    \mathbf{a}_\sa¬octets \in \N_{2^{64}} &\equiv \sum\limits_{\,(h, z) \in \Fkeys{\mathbf{a}_\sa¬requests}\,} \!\!\!\!81 + z \\
+    \mathbf{a}_\sa¬items \in \Nbits{32} &\equiv 2\cdot\len{\,\mathbf{a}_\sa¬requests\,} + \len{\,\mathbf{a}_\sa¬storage\,} \\
+    \mathbf{a}_\sa¬octets \in \Nbits{64} &\equiv \sum\limits_{\,(h, z) \in \Fkeys{\mathbf{a}_\sa¬requests}\,} \!\!\!\!81 + z \\
     &\phantom{\equiv\ } + \sum\limits_{(x, y) \in \mathbf{a}_\sa¬storage} 34 + \len{y} + \len{x} \\
     \mathbf{a}_\sa¬minbalance \in \balance &\equiv \max(0, \mathsf{B}_S + \mathsf{B}_I \cdot \mathbf{a}_\sa¬items + \mathsf{B}_L \cdot \mathbf{a}_\sa¬octets - \mathbf{a}_\sa¬gratis)
   \end{aligned}\right.
@@ -153,14 +153,14 @@ We may then define a third dependent term $\sa¬minbalance$, the minimum, or \em
 
 
 \subsection{Service Privileges}
-\Jam includes the ability to bestow privileges on a number of services. The portion of state in which this is held is denoted $\privileges$ and includes four kinds of privilege. The first, $\manager$, is the index of the \emph{manager} service which is the service able to effect an alteration of $\privileges$ from block to block as well as bestow services with storage deposit credits. The following, $\assigners$, are the service indices capable of altering the authorizer queue $\varphi$, one for each core. The next, $\delegator$, is able to set $\stagingset$.
+\Jam includes the ability to bestow privileges on a number of services. The portion of state in which this is held is denoted $\privileges$ and includes four kinds of privilege. The first, $\manager$, is the index of the \emph{manager} service which is the service able to effect an alteration of $\privileges$ from block to block as well as bestow services with storage deposit credits. The following, $\assigners$, are the service indices capable of altering the authorizer queue $\authqueue$, one for each core. The next, $\delegator$, is able to set $\stagingset$.
 
 Finally, $\alwaysaccers$ is a small dictionary containing the indices of services which automatically accumulate in each block together with a basic amount of gas with which each accumulates. Formally:
 \begin{align}
   \privileges \equiv \tuple{
-    \isa{\manager}{\N_S} ,
-    \isa{\assigners}{\seq{\N_S}_\corecount} ,
-    \isa{\delegator}{\N_S} ,
-    \isa{\alwaysaccers}{\dict{\N_S}{\gas}}
+    \isa{\manager}{\serviceid} ,
+    \isa{\assigners}{\seq{\serviceid}_\corecount} ,
+    \isa{\delegator}{\serviceid} ,
+    \isa{\alwaysaccers}{\dict{\serviceid}{\gas}}
   }
 \end{align}
