--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -7,7 +7,7 @@
 
 \section{Accumulation}\label{sec:accumulation}
 
-Accumulation may be defined as some function whose arguments are $\mathbf{W}$ and $\accounts$ together with selected portions of (at times partially transitioned) state and which yields the posterior service state $\accountspostpreimage$ together with additional state elements $\stagingset'$, $\varphi'$ and $\privileges'$.
+Accumulation may be defined as some function whose arguments are $\mathbf{W}$ and $\accounts$ together with selected portions of (at times partially transitioned) state and which yields the posterior service state $\accountspostpreimage$ together with additional state elements $\stagingset'$, $\authqueue'$ and $\privileges'$.
 
 The proposition of accumulation is in fact quite simple: we merely wish to execute the \emph{Accumulate} logic of the service code of each of the services which has at least one work-digest, passing to it relevant data from said digests together with useful contextual information. However, there are three main complications. Firstly, we must define the execution environment of this logic and in particular the host functions available to it. Secondly, we must define the amount of gas to be allowed for each service's execution. Finally, we must determine the nature of transfers within Accumulate which, as we will see, leads to the need for a second entry-point, \emph{on-transfer}.
 
@@ -95,25 +95,25 @@ We resolve this by defining a function $\Delta_+$ which accumulates work-reports
 
 Only once all such accumulation is executed do we integrate the results and thus define the relevant posterior state items. In doing so we also integrate the consequences of any \emph{deferred-transfers} implied by accumulation.
 
-Our formalisms begin by defining $\partialstate$ as a characterization of (\ie values capable of representing) state components which are both needed and mutable by the accumulation process. This comprises the service accounts state (as in $\accountspre$), the upcoming validator keys $\stagingset$, the queue of authorizers $\varphi$ and the privileges state $\privileges$. Formally:
+Our formalisms begin by defining $\partialstate$ as a characterization of (\ie values capable of representing) state components which are both needed and mutable by the accumulation process. This comprises the service accounts state (as in $\accountspre$), the upcoming validator keys $\stagingset$, the queue of authorizers $\authqueue$ and the privileges state $\privileges$. Formally:
 \begin{equation}
   \label{eq:partialstate}
   \partialstate \equiv \left(\begin{aligned}
-    &\isa{\mathbf{d}}{\dict{\N_S}{\serviceaccount}} \,,\;
+    &\isa{\mathbf{d}}{\dict{\serviceid}{\serviceaccount}} \,,\;
     \isa{\mathbf{i}}{\seq{\valkey}_\valcount} \,,\;
     \isa{\mathbf{q}}{\seq{\seq{\hash}_\mathsf{Q}}_\corecount} \,,\\
-    &\isa{m}{\N_S} \,,\;
-    \isa{\mathbf{a}}{\seq{\N_S}_\corecount} \,,\;
-    \isa{v}{\N_S} \,,\;
-    \isa{\mathbf{z}}{\dict{\N_S}{\gas}}
+    &\isa{m}{\serviceid} \,,\;
+    \isa{\mathbf{a}}{\seq{\serviceid}_\corecount} \,,\;
+    \isa{v}{\serviceid} \,,\;
+    \isa{\mathbf{z}}{\dict{\serviceid}{\gas}}
   \end{aligned}\right)
 \end{equation}
 
 We denote the set characterizing a \emph{deferred transfer} as $\defxfer$, noting that a transfer includes a memo component $m$ of $\mathsf{W}_T = 128$ octets, together with the service index of the sender $s$, the service index of the receiver $d$, the balance to be transferred $a$ and the gas limit $g$ for the transfer. Formally:
 \begin{align}
   \defxfer \equiv \tuple{
-    \isa{s}{\N_S} ,
-    \isa{d}{\N_S} ,
+    \isa{s}{\serviceid} ,
+    \isa{d}{\serviceid} ,
     \isa{a}{\balance} ,
     \isa{m}{\blob_{\mathsf{W}_T}} ,
     \isa{g}{\gas}
@@ -122,13 +122,13 @@ We denote the set characterizing a \emph{deferred transfer} as $\defxfer$, notin
 
 Finally, we denote the set of service/hash pairs, utilized as a service-indexed commitment to the accumulation output, as $\servouts$:
 \begin{equation}
-  \servouts \equiv \{(\N_S, \hash)\} \qquad \gasused \equiv \seq{\tup{\N_S, \gas}}
+  \servouts \equiv \{(\serviceid, \hash)\} \qquad \gasused \equiv \seq{\tup{\serviceid, \gas}}
 \end{equation}
 
 We define the outer accumulation function $\Delta_+$ which transforms a gas-limit, a sequence of work-reports, an initial partial-state and a dictionary of services enjoying free accumulation, into a tuple of the number of work-results accumulated, a posterior state-context, the resultant deferred-transfers and accumulation-output pairings:
 \begin{equation}
   \Delta_+\colon\left\{\begin{aligned}
-    &(\gas, \seq{\workreport}, \partialstate, \dict{\N_S}{\gas}) \to (\N, \partialstate, \defxfers, \servouts, \gasused) \\
+    &(\gas, \seq{\workreport}, \partialstate, \dict{\serviceid}{\gas}) \to (\N, \partialstate, \defxfers, \servouts, \gasused) \\
     &(g, \mathbf{w}, \mathbf{o}, \mathbf{f}) \!\mapsto\! \begin{cases}
       (0, \mathbf{o}, [], \{\}, []) &
         \when i = 0 \\
@@ -144,7 +144,7 @@ We define the outer accumulation function $\Delta_+$ which transforms a gas-limi
 We come to define the parallelized accumulation function $\Delta_*$ which, with the help of the single-service accumulation function $\Delta_1$, transforms an initial state-context, together with a sequence of work-reports and a dictionary of privileged always-accumulate services, into a tuple of the total gas utilized in \textsc{pvm} execution $u$, a posterior state-context $(\mathbf{d}', \mathbf{i}', \mathbf{q}', m', \mathbf{a}', v', \mathbf{x}')$ and the resultant accumulation-output pairings $\mathbf{b}$ and deferred-transfers $\wideparen{\mathbf{t}}$:
 \begin{equation}
   \Delta_*\colon\left\{\;\begin{aligned}
-    &(\partialstate, \seq{\workreport}, \dict{\N_S}{\gas}) \to (\partialstate, \defxfers, \servouts, \gasused) \\
+    &(\partialstate, \seq{\workreport}, \dict{\serviceid}{\gas}) \to (\partialstate, \defxfers, \servouts, \gasused) \\
     &(\mathbf{o}, \mathbf{w}, \mathbf{f}) \mapsto ((\mathbf{d}', \mathbf{i}', \mathbf{q}', m', \mathbf{a}', v', \mathbf{z}'), \wideparen{\mathbf{t}}, \mathbf{b}, \mathbf{u})\!\!\!\!\!\!\\
     &\text{where:}\\
     &\ \begin{aligned}
@@ -168,7 +168,7 @@ We come to define the parallelized accumulation function $\Delta_*$ which, with 
 And $\fnprovide$ is the preimage integration function, which transforms a dictionary of service states and a set of service/hash pairs into a new dictionary of service states. Preimage provisions into services which no longer exist or whose relevant request is dropped are disregarded:
 \begin{equation}
   \fnprovide\colon\left\{\begin{aligned}
-    &(\dict{\N_S}{\serviceaccount}, \{\tup{\N_S, \blob}\}) \to \dict{\N_S}{\serviceaccount} \\
+    &(\dict{\serviceid}{\serviceaccount}, \{\tup{\serviceid, \blob}\}) \to \dict{\serviceid}{\serviceaccount} \\
     &(\mathbf{d}, \mathbf{p}) \mapsto \mathbf{d}'\;\where \mathbf{d}' = \mathbf{d}\;\text{except:} \\
     &\quad\forall \tup{s, \mathbf{i}} \in \mathbf{p},\;
       s \in \Fkeys{\mathbf{d}},\;
@@ -206,7 +206,7 @@ The single-service accumulation function, $\Delta_1$, transforms an initial stat
     &\begin{aligned}
       \tup{\begin{aligned}
         &\partialstate, \seq{\workreport},\\
-        &\dict{\N_S}{\gas}, \N_S
+        &\dict{\serviceid}{\gas}, \serviceid
       \end{aligned}}
       &\to \tup{
         \begin{alignedat}{3}
@@ -214,7 +214,7 @@ The single-service accumulation function, $\Delta_1$, transforms an initial stat
           \isa{&\mathbf{t}&}{\defxfers}\,,\;
           \isa{b}{\optional{\hash}}\,,\\
           \isa{u&}{\gas}\,,\;
-          \isa{&\mathbf{p}&}{\{\tup{\N_S, \blob}\}}
+          \isa{&\mathbf{p}&}{\{\tup{\serviceid, \blob}\}}
         \end{alignedat}
       } \\
       (\mathbf{o}, \mathbf{w}, \mathbf{f}, s) &\mapsto \Psi_A(\mathbf{o}, \thetime', s, g, \mathbf{i})
@@ -249,20 +249,20 @@ This introduces $\operandtuple$, the set of wrangled \emph{operand tuples}, used
 
 \newcommand*{\accoutseq}{\mathbf{c}}
 
-Given the result of the top-level $\Delta_+$, we may define the posterior state $\privileges'$, $\varphi'$ and $\stagingset'$ as well as the first intermediate state of the service-accounts $\accountspostacc$ and the Accumulation Output Log $\lastaccout'$:
+Given the result of the top-level $\Delta_+$, we may define the posterior state $\privileges'$, $\authqueue'$ and $\stagingset'$ as well as the first intermediate state of the service-accounts $\accountspostacc$ and the Accumulation Output Log $\lastaccout'$:
 \begin{align}
   \using &g = \max\left(\mathsf{G}_T, \mathsf{G}_A\cdot \corecount + \textstyle \sum_{x \in \Fvalues{\alwaysaccers}}(x)\right)\\
-  \also &\mathbf{o} = (\accountspre, \stagingset, \varphi, \manager, \assigners, \delegator, \alwaysaccers) \\
+  \also &\mathbf{o} = (\accountspre, \stagingset, \authqueue, \manager, \assigners, \delegator, \alwaysaccers) \\
   &(n, \mathbf{o}', \mathbf{t}, \lastaccout', \mathbf{u}) \equiv
     \Delta_+(g, \mathbf{W}^*, \mathbf{o}, \alwaysaccers) \\
-  &(\accountspostacc, \stagingset', \varphi', \manager', \assigners', \delegator', \alwaysaccers') \equiv \mathbf{o}'
+  &(\accountspostacc, \stagingset', \authqueue', \manager', \assigners', \delegator', \alwaysaccers') \equiv \mathbf{o}'
 \end{align}
 
 From this formulation, we also receive $\mathbf{t}$, the grand sequence of deferred transfers, together with $n$, the total number of work-items accumulated and $\mathbf{u}$, the gas used in the accumulation process for each service. Each of these terms are used shortly.
 
 We compose $\mathbf{I}$, our accumulation statistics, which is a mapping from the service indices which were accumulated to the amount of gas used throughout accumulation and the number of work-items accumulated. Formally:
 \begin{align}
-  &\mathbf{I} \in \dict{\N_S}{\tuple{\gas, \N}} \\
+  &\mathbf{I} \in \dict{\serviceid}{\tuple{\gas, \N}} \\
   &\textstyle \mathbf{I} \equiv \left\{ s \mapsto \tup{\sum_{(s, u) \in \mathbf{u}}(u), \len{N(s)}} \;\middle\mid\; N(s) \ne [] \right\} \\
   \where &N(s) \equiv \sq{r \mid w \orderedin \mathbf{W}^*_{\dots n} , r \orderedin w_\mathbf{r} , r_s = s }
 \end{align}
@@ -272,8 +272,8 @@ We compose $\mathbf{I}$, our accumulation statistics, which is a mapping from th
 We have denoted the sequence of implied transfers as $\mathbf{t}$, ordered internally according to the source service's execution. We define a selection function $\selectxfers$, which maps a desired destination service index into the sequence of transfers from $\mathbf{t}$ which target said service. It is ordered primarily according to the source service index and secondarily their order within $\mathbf{t}$. Formally:
 \begin{equation}
   \selectxfers\colon \left\{\;\begin{aligned}
-    \N_S &\to \defxfers \\
-    d &\mapsto \left[\,t \mid s \orderedin \N_S,\ t \orderedin \mathbf{t},\ t_s = s,\ t_d = d\,\right]
+    \serviceid &\to \defxfers \\
+    d &\mapsto \left[\,t \mid s \orderedin \serviceid,\ t \orderedin \mathbf{t},\ t_s = s,\ t_d = d\,\right]
   \end{aligned}\right.\!\!\!\!
 \end{equation}
 
@@ -290,7 +290,7 @@ The second intermediate state $\accountspostxfer$ may then be defined with all t
 Furthermore we build the deferred transfers statistics value $\mathbf{X}$ as the number of transfers and the total gas used in transfer processing for each \emph{destination} service index. Formally:
 \begin{align}
   \label{eq:deferredtransfers}
-  &\mathbf{X} \in \dict{\N_S}{\tuple{\N, \gas}} \\
+  &\mathbf{X} \in \dict{\serviceid}{\tuple{\N, \gas}} \\
   &\textstyle \mathbf{X} \equiv \left\{ d \mapsto \tup{\len{\selectxfers(d)}, u} \;\middle\vert\; \begin{aligned}
     \selectxfers(d) &\ne [],\\ \exists a: \mathbf{x}[d] &= (a, u)
   \end{aligned}
@@ -321,7 +321,7 @@ We define the final state of the ready queue and the accumulated map by integrat
 
 After accumulation, we must integrate all preimages provided in the lookup extrinsic to arrive at the posterior account state. The lookup extrinsic is a sequence of pairs of service indices and data. These pairs must be ordered and without duplicates (equation \ref{eq:preimagesareordered} requires this). The data must have been solicited by a service but not yet provided in the \emph{prior} state. Formally:
 \begin{align}
-  \xtpreimages &\in \seq{\tuple{ \N_S,\, \blob }} \\
+  \xtpreimages &\in \seq{\tuple{ \serviceid,\, \blob }} \\
   \label{eq:preimagesareordered}\xtpreimages &= \orderuniqby{i}{i \in \xtpreimages} \\
   Y(\mathbf{d}, s, h, l) &\Leftrightarrow
   h \not\in \mathbf{d}[s]_\mathbf{p} \wedge
